--- a/index.html
+++ b/index.html
@@ -78,6 +78,7 @@
                         name="user-first-name"
                         required
                         pattern="[a-zA-Zа-яА-ЯїЇіІєЄ']+"
+                        placeholder="Name"
                     >
                     <input 
                         class="buy-now-per-info-name-name" 
@@ -86,6 +87,7 @@
                         name="user-last-name" 
                         required
                         pattern="[a-zA-Zа-яА-ЯїЇіІєЄ']+"
+                        placeholder="Surname"
                     >
                 </div>
             </div>
@@ -99,7 +101,9 @@
                         type="email" 
                         name="user-email" 
                         required id="user-email"
-                        pattern="[a-zA-Z0-9._%+-]+@[a-zA-Z0-9.-]+\.[a-zA-Z]{2,}">
+                        pattern="[a-zA-Z0-9._%+-]+@[a-zA-Z0-9.-]+\.[a-zA-Z]{2,}"
+                        placeholder="Email"
+                        >
                 </div>
             </div>
 
@@ -108,8 +112,15 @@
                     Phone number
                 </label>
             <div class="contact-form-input-wraper">
-              <input class="buy-now-per-info-name-name" type="tel" id="user-tel" name="user_tel" required
-                pattern="[0-9]{3}-[0-9]{3}-[0-9]{2}-[0-9]{2}" title="xxx-xxx-xx-xx">
+              <input class="buy-now-per-info-name-name" 
+                type="tel" 
+                id="user-tel" 
+                name="user_tel" 
+                required
+                pattern="[0-9]{3}-[0-9]{3}-[0-9]{2}-[0-9]{2}" 
+                title="xxx-xxx-xx-xx"
+                placeholder="Phone number"
+                >
               <svg aria-label="іконка ін" width="18" height="24" class="form-class-svg">
                 <use href="./images/icons.svg#icon-tell"></use>
               </svg>
@@ -118,7 +129,7 @@
 
              <div class="buy-now-form-personal-information">
                 <label class="buy-now-per-info" for="user-bank-account">
-                    Bank account number
+                    Card number
                 </label>
                 <div class="contact-form-input-wraper">
                     <input 
@@ -128,7 +139,9 @@
                         name="user_bank_account" 
                         required
                         pattern="[0-9]{16}" 
-                        title="Enter a 16-digit bank account number">
+                        title="Enter card"
+                        placeholder="Enter card"
+                        >
                     <svg aria-label="банковская иконка" width="18" height="24" class="form-class-svg">
                         <use href="./images/icons.svg#icon-bank"></use>
                     </svg>
