--- a/index.html
+++ b/index.html
@@ -161,20 +161,23 @@
                 <label class="buy-now-per-info" for="user-tel">
                     Phone number
                 </label>
-            <div class="contact-form-input-wraper">
-              <input class="buy-now-per-info-name-name" 
-                type="tel" 
-                id="user-tel" 
-                name="user_tel" 
-                required
-                pattern="[0-9]{3}-[0-9]{3}-[0-9]{2}-[0-9]{2}" 
-                title="xxx-xxx-xx-xx"
-                placeholder="Phone number"
-                >
-              <svg aria-label="іконка ін" width="18" height="24" class="form-class-svg">
-                <use href="./images/icons.svg#icon-tell"></use>
-              </svg>
-            </div>
+                <div class="contact-form-input-wraper">
+                    <span class="buy-now-div-for-icon">
+                        <svg aria-label="іконка ін" width="23.69" height="17.63" class="buy-now-form-class-svg">
+                            <use href="./img/icons.svg#icon-flag"></use>
+                        </svg>
+                        <span class="buy-now-form-class-span">+380</span>
+                    </span>
+                    <input class="buy-now-per-info-name-tel" 
+                      type="tel" 
+                      id="user-tel" 
+                      name="user_tel" 
+                      required
+                      pattern="[0-9]{3}-[0-9]{3}-[0-9]{2}-[0-9]{2}" 
+                      title="xxx-xxx-xx-xx"
+                      placeholder="Phone number"
+                    >
+                  </div>
             </div> 
 
              <div class="buy-now-form-personal-information">
@@ -192,7 +195,7 @@
                         title="Enter card"
                         placeholder="Enter card"
                         >
-                    <svg aria-label="банковская иконка" width="18" height="24" class="form-class-svg">
+                    <svg aria-label="bank-icon" width="32" height="21" class="">
                         <use href="./images/icons.svg#icon-bank"></use>
                     </svg>
                 </div>
