--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
                     <picture>
                         <source
                           srcset="
-                          ./img/buy-now-modal/buy01-desktop@1x.jpg 1x,
-                          ./img/buy-now-modal/buy01-desktop@2x.jpg 2x
+                          ./img/buy-now-modal/buy01-desktop-tab@1x.jpg 1x,
+                          ./img/buy-now-modal/buy01-desktop-tab@2x.jpg 2x
                             "
                           media="(min-width: 768px) "
                         />
@@ -61,8 +61,8 @@
                     <picture>
                         <source
                           srcset="
-                            ./img/buy-now-modal/buy02-desktop@1x.jpg 1x,
-                            ./img/buy-now-modal/buy02-desktop@2x.jpg 2x
+                            ./img/buy-now-modal/buy02-desktop-tab@1x.jpg 1x,
+                            ./img/buy-now-modal/buy02-desktop-tab@2x.jpg 2x
                             "
                           media="(min-width: 768px) "
                         />
@@ -89,8 +89,8 @@
                     <picture>
                         <source
                           srcset="
-                            ./img/buy-now-modal/buy03-desktop@1x.jpg 1x,
-                            ./img/buy-now-modal/buy03-desktop@2x.jpg 2x
+                            ./img/buy-now-modal/buy03-desktop-tab@1x.jpg 1x,
+                            ./img/buy-now-modal/buy03-desktop-tab@2x.jpg 2x
                             "
                           media="(min-width: 768px) "
                         />
@@ -117,7 +117,9 @@
 
         <form class="modal-contact-form">
             <div class="buy-now-form-personal-information">
-                <label class="buy-now-per-info" for="user-first-name">
+                <label 
+                    class="buy-now-per-info" 
+                    for="user-first-name">
                     Personal Information
                 </label>
                 <div class="buy-now-per-info-name-div">
@@ -143,7 +145,9 @@
             </div>
 
             <div class="buy-now-form-personal-information">
-                <label class="buy-now-per-info" for="user-email">
+                <label 
+                    class="buy-now-per-info" 
+                    for="user-email">
                     Email
                 </label>
                 <div class="contact-form-input-wraper">
@@ -158,7 +162,9 @@
             </div>
 
              <div class="buy-now-form-personal-information">
-                <label class="buy-now-per-info" for="user-tel">
+                <label 
+                    class="buy-now-per-info" 
+                    for="user-tel">
                     Phone number
                 </label>
                 <div class="contact-form-input-wraper">
@@ -173,15 +179,17 @@
                       id="user-tel" 
                       name="user_tel" 
                       required
-                      pattern="[0-9]{3}-[0-9]{3}-[0-9]{2}-[0-9]{2}" 
-                      title="xxx-xxx-xx-xx"
+                      pattern="[0-9]{3}-[0-9]{2}-[0-9]{2}" 
+                      title="xxx-xx-xx"
                       placeholder="Phone number"
                     >
                   </div>
             </div> 
 
              <div class="buy-now-form-personal-information">
-                <label class="buy-now-per-info" for="user-bank-account">
+                <label 
+                    class="buy-now-per-info" 
+                    for="user-bank-account">
                     Card number
                 </label>
                 <div class="contact-form-input-wraper">
@@ -195,8 +203,12 @@
                         title="Enter card"
                         placeholder="Enter card"
                         >
-                    <svg aria-label="bank-icon" width="32" height="21" class="">
-                        <use href="./images/icons.svg#icon-bank"></use>
+                    <svg 
+                        aria-label="bank-icon" 
+                        width="32" 
+                        height="21" 
+                        class="icon-bank">
+                        <use href="./img/icons.svg#icon-bank"></use>
                     </svg>
                 </div>
             </div>
@@ -208,11 +220,10 @@
                     Comment
                 </label>
                 <textarea 
-                    class="contact-from-message" 
+                    class="buy-now-contact-from-message" 
                     name="user-comment" 
                     id="user-comment"
-                    placeholder="Enter text">
-                </textarea>
+                    placeholder="Enter text"></textarea>
             </div> 
 
             <button type="submit" class="buy-now-form-btn-submit">
