--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <div class="buy-now-modal">
         <button type="button" class="buy-now-modal-class-button" data-modal-close-bay-now>
         <svg class="buy-now-modal-close-icon" width="14" height="14">
-          <use href="./imag/icons.svg#icon-close-subscribe"></use>
+          <use href="./img/icons.svg#icon-close-subscribe"></use>
         </svg>
         </button>
             <h1 class="buy-now-form-modal-window-header">BUY <span class="buy-now-form-modal-window-header-span">NOW</span></h1>
