--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
                         width="32" 
                         height="21" 
                         class="icon-bank">
-                        <use href="./img/icons.svg#icon-bank"></use>
+                        <use href="./img/icons.svg#icon-mastercard"></use>
                     </svg>
                 </div>
             </div>
