--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
                         aria-label="bank-icon" 
                         width="32" 
                         height="21" 
-                        class="icon-bank">
+                        class="buy-now-icon-bank">
                         <use href="./img/icons.svg#icon-mastercard"></use>
                     </svg>
                 </div>
