--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
             <h1 class="buy-now-form-modal-window-header">BUY <span class="buy-now-form-modal-window-header-span">NOW</span></h1>
             <ul class="buy-now-form-modal-window-list">
                 <li class="buy-now-form-modal-window-row"> 
-                    <picture>
-                        <source
+                    <picture class="buy-now-img-prod-pic">
+                        <source 
                           srcset="
                           ./img/buy-now-modal/buy01-desktop-tab@1x.jpg 1x,
                           ./img/buy-now-modal/buy01-desktop-tab@2x.jpg 2x
@@ -58,7 +58,7 @@
                     </button>
                 </li>
                 <li class="buy-now-form-modal-window-row">
-                    <picture>
+                    <picture class="buy-now-img-prod-pic">
                         <source
                           srcset="
                             ./img/buy-now-modal/buy02-desktop-tab@1x.jpg 1x,
@@ -86,7 +86,7 @@
                     </button>
                 </li>
                 <li class="buy-now-form-modal-window-row">
-                    <picture>
+                    <picture class="buy-now-img-prod-pic">
                         <source
                           srcset="
                             ./img/buy-now-modal/buy03-desktop-tab@1x.jpg 1x,
