--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
   </head>
 
 <body class="body"> 
+  <!-- це потрібно поставити на Или кнопку -->
     <button class="modal-open-btn" type="button" data-modal-open-bay-now>
         open modal
       </button> 
@@ -37,21 +38,21 @@
                           ./img/buy-now-modal/buy01-desktop-tab@2x.jpg 2x
                             "
                           media="(min-width: 768px) "
-                        />
+                        >
                         <source
                           srcset="
                           ./img/buy-now-modal/buy01-mob@1x.jpg 1x,
                           ./img/buy-now-modal/buy01-mob@2x.jpg 2x
                              "
                           media="(min-width: 320px) "
-                        />
+                        >
                         <img
                           class="buy-now-img-prod"
                           src="../img/buy-now-modal/buy01-mob@1x.jpg"
                           alt="piece"
                           width="107"
                           height="120"
-                        />
+                        >
                       </picture>
                     <button class="buy-now-img-btg">
                         <span class="buy-now-img-span">100 g</span>
@@ -65,21 +66,21 @@
                             ./img/buy-now-modal/buy02-desktop-tab@2x.jpg 2x
                             "
                           media="(min-width: 768px) "
-                        />
+                        >
                         <source
                           srcset="
                           ./img/buy-now-modal/buy02-mob@1x.jpg 1x,
                           ./img/buy-now-modal/buy02-mob@2x.jpg 2x
                              "
                           media="(min-width: 320px) "
-                        />
+                        >
                         <img
                           class="buy-now-img-prod"
                           src="../img/buy-now-modal/buy02-mob@1x.jpg"
                           alt="piece"
                           width="107"
                           height="120"
-                        />
+                        >
                     </picture>
                     <button class="buy-now-img-btg">
                         <span class="buy-now-img-span">200 g</span>
@@ -93,21 +94,21 @@
                             ./img/buy-now-modal/buy03-desktop-tab@2x.jpg 2x
                             "
                           media="(min-width: 768px) "
-                        />
+                        >
                         <source
                           srcset="
                           ./img/buy-now-modal/buy03-mob@1x.jpg 1x,
                           ./img/buy-now-modal/buy03-mob@2x.jpg 2x
                              "
                           media="(min-width: 320px) "
-                        />
+                        >
                         <img
                           class="buy-now-img-prod"
                           src="../img/buy-now-modal/buy03-mob@1x.jpg"
                           alt="piece"
                           width="107"
                           height="120"
-                        />
+                        >
                     </picture>
                     <button class="buy-now-img-btg">
                         <span class="buy-now-img-span">300 g</span>
@@ -115,7 +116,7 @@
             </ul>
 
 
-        <form class="modal-contact-form">
+        <form class="buy-now-modal-contact-form">
             <div class="buy-now-form-personal-information">
                 <label 
                     class="buy-now-per-info" 
